2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02861] IPv6 configuration check
	* configure: force "#define INET6" if socket(AF_INET6, SOCK_STREAM, 0)
			failed but use_ipv6=y in config.param

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02859]
	* config.h.dist (DEF_MIGEMO_COMMAND): added
	* configure (DEF_MIGEMO_COMMAND): added
	* fm.h (migemo_command): initial value is DEF_MIGEMO_COMMAND
	* main.c (migemostr): remove here, move search.c
	* main.c (srchcore): dont migemostr() here
	* proto.h (init_migemo): added
	* rc.c (sync_with_option): init_migemo()
	* search.c (init_migemo): added
	* search.c (open_migemo): added
	* search.c (migemostr): communicate background migemo
	* search.c (forwardSearch): if regexCompile for migemostr failed, 
		try original str
	* search.c (backwardSearch): ditto

2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02855]
	* main.c (dispincsrch): for C-s C-s, revert some changes

2002-01-17  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02854] highlight for incremental search
	* NEWS: highlight for incremental search
	* display.c (EFFECT_MARK_START): added
	* display.c (EFFECT_MARK_END): added
	* display.c (EFFECT_MARK_START_C): added
	* display.c (EFFECT_MARK_END_C): added
	* display.c (EFFECT_MARK_START_M): added
	* display.c (EFFECT_MARK_END_M): added
	* display.c: define_effect for MARK_{START,END}
	* display.c (mark_mode): added
	* display.c (redrawLine): if mark_mode
	* display.c (do_effects): do_effect2(PE_MARK, ...)
	* display.c (do_effects): do_effect1(PE_MARK, ...)
	* fm.h (P_EFFECT): changed to 0x01ff
	* fm.h (PE_MARK): moved
	* fm.h (mark_color): added
	* linein.c (inputLineHistSearch): incrfunc(int ch, Str str)
	* main.c (clear_mark): added
	* main.c (dispincsrch): remove arg `x', `y'
	* main.c (dispincsrch): move SAVE_BUFPOSITION()
	* main.c (srch): if (result & SR_FOUND) clear_mark()
	* main.c (cmd_mark): PE_MARK
	* main.c (nextMk): s/PM_MARK/PE_MARK/