@@ -1,5 +1,15 @@
 2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* [w3m-dev 02862] SIGPIPE for migemo support
+	* main.c (SigPipe): added
+	* main.c (MAIN): signal(SIGPIPE, )
+	* search.c: #include <errno.h>
+	* search.c (migemostr): check fflush() error
+	* search.c (migemostr): check result string (empty is err)
+	* search.c (migemostr): if error occured, disable use_migemo
+
+2002-01-17  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* [w3m-dev 02861] IPv6 configuration check
 	* configure: force "#define INET6" if socket(AF_INET6, SOCK_STREAM, 0)
 			failed but use_ipv6=y in config.param
